Refactor ConfigUtils to use record type; improve whitespace consistency and suppress unused warnings in various classes